--- a/test/fixtures/stocks.yml
+++ b/test/fixtures/stocks.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  symbol: MyString
-  name: MyString
-  price: 9.99
-  user: one
+  symbol: AAPL
+  name: Apple Inc.
+  price: 150.00
 
 two:
-  symbol: MyString
-  name: MyString
-  price: 9.99
-  user: two
+  symbol: GOOGL
+  name: Alphabet Inc.
+  price: 2500.00
